Add scripts for Figure S2

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 
 01.JCTC/MultiWFN/Multiwfn_3.8_dev_src_Linux/gMultiwfn_noGUI
 01.JCTC/MultiWFN/Multiwfn_3.8_dev_src_Linux/gMultiwfn
+
+
+01.JCTC/GTOSTO-plot/GTO-div-STO.png
+01.JCTC/GTOSTO-plot/STO-GTO.csv
+01.JCTC/GTOSTO-plot/STO-GTO.png
+01.JCTC/GTOSTO-plot/STO-GTO_logscaled.png
